--- a/CodeOasis.Front/src/app/app.component.css
+++ b/CodeOasis.Front/src/app/app.component.css
@@ -1,3 +1,25 @@
+:host {
+  display: flex;
+  min-height: 100%;
+}
+
+.mainWrapper {
+  width: 100%;
+  height: 600px;
+  background-color: #83a3cf;
+}
+
+.mainWrapper > div:first-child {
+  width: 800px;
+  margin: auto;
+}
+
 .errorMsg {
   color: red;
+}
+
+ul {
+  list-style-type: none;
+  margin: 20 0;
+  padding: 0;
 }
