--- a/CodeOasis.Front/src/app/app.component.html
+++ b/CodeOasis.Front/src/app/app.component.html
@@ -1,17 +1,25 @@
-<h3>Robot's Dashboard</h3>
-<div>
-  <div>You can send {{ countDownInscrutions }} instructions</div>
-  <input
-    type="text"
-    placeholder="Please enter next moves"
-    [(ngModel)]="moves"
-    title="The expected format is:['right 0', 'up 0', 'left 0', 'down 0']"
-  />
-  <button (click)="send()" [disabled]="countDownInscrutions == 0">Send</button>
-  <div class="errorMsg" *ngIf="showValidationError">
-    The input is empty or in wrong format
+<div class="mainWrapper">
+  <div>
+    <h3>Robot's Dashboard</h3>
+    <div>
+      <div>
+        <span>You can send {{ countDownInscrutions }} instructions</span>
+      </div>
+      <input
+        type="text"
+        placeholder="Please enter next moves"
+        [(ngModel)]="moves"
+        title="The expected format is:['right 0', 'up 0', 'left 0', 'down 0']"
+      />
+      <button (click)="send()" [disabled]="countDownInscrutions == 0">
+        Send
+      </button>
+      <div class="errorMsg" *ngIf="showValidationError">
+        The input is empty or in wrong format
+      </div>
+      <ul>
+        <li *ngFor="let m of movesList">{{ m }}</li>
+      </ul>
+    </div>
   </div>
-  <ul>
-    <li *ngFor="let m of movesList">{{ m }}</li>
-  </ul>
 </div>
