refactoring validation messages

--- a/CodeOasis.Front/src/app/app.component.html
+++ b/CodeOasis.Front/src/app/app.component.html
@@ -14,8 +14,8 @@
       <button (click)="send()" [disabled]="countDownInscrutions == 0">
         Send
       </button>
-      <div class="errorMsg" *ngIf="showValidationError">
-        The input is empty or in wrong format
+      <div class="errorMsg">
+        {{ validationMsg }}
       </div>
       <ul>
         <li *ngFor="let m of movesList">{{ m }}</li>
